--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+body {
+  background-image: url("img/bg_day.png");
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 body, select {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica,Arial,sans-serif;
   font-weight: 300;
